# cpp-project-template

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cpp.html  my__lib_8cpp__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
.github/workflows/: documentation.yaml  documentation.yml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: Coverage.cmake
search/: all_1.js  all_3.js  all_4.js  functions_0.js  functions_1.js  functions_2.js
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
tests/: CMakeLists.txt  main.cpp
tests/apps/calc_console/: CMakeLists.txt
tests/libs/calc/: CMakeLists.txt
